add swagger attendance and documention swagger for it
