# backend/internal/models/dao/attendance.go
@@ -6,10 +6,10 @@ type Attendance struct {
 	ID            int `gorm:"primaryKey"`
 	EmployeeID    int
 	Employee      Employee
-	Date          time.Time `gorm:"type:date"`
-	HomeTime      string    `gorm:"type:time"`
-	TotalOvertime string    `gorm:"type:text"`
-	Note          string    `gorm:"type:text"`
+	Date          time.Time  `gorm:"type:date"`
+	HomeTime      *time.Time `gorm:"type:time"`
+	TotalOvertime string     `gorm:"type:text"`
+	Note          string     `gorm:"type:text"`
 }
 
 func (Attendance) TableName() string {
